vless-http/base/subscription-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vless-subscription
  labels:
    app: vless-subscription
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vless-subscription
  template:
    metadata:
      labels:
        app: vless-subscription
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
              readOnly: true
            - name: subscription
              mountPath: /usr/share/nginx/html/sub
              subPath: sub
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/auth/htpasswd
              subPath: htpasswd
              readOnly: true
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
      volumes:
        - name: nginx-config
          configMap:
            name: vless-subscription
        - name: subscription
          configMap:
            name: vless-subscription
