vless-http/base/subscription-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vless-subscription
  labels:
    app: vless-subscription
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: vless-subscription
