vless-http/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vless-http
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
    - hosts:
        - vless-httpx.outi.ir
      secretName: vless-httpx-outi-tls
  ingressClassName: nginx
  rules:
    - host: vless-httpx.outi.ir
      http:
        paths:
          - path: /vless
            pathType: Prefix
            backend:
              service:
                name: vless-http
                port:
                  number: 8080
